--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,7 +2,7 @@
 
 // Turn on freq used libraries
 // @import 'normalize-css/normalize';
-// @import 'font-awesome/scss/font-awesome';
+@import 'font-awesome/scss/font-awesome';
 .app {
   width: 50%;
   margin: auto;
@@ -17,8 +17,20 @@ a {
   color: black;
   font-size: 20px;
   text-decoration: none;
-  margin-left: 5%;
   &:hover {
     text-decoration: underline;
+  }
+}
+
+button {
+  border: 0;
+  width: 100%;
+  height: 40px;
+  font-size: 20px;
+  font-family: sans-serif;
+  background: white;
+  transition: all .4s;
+  &:hover {
+    background: #E0E0E0;
   }
 }
